--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -15,7 +15,8 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-    max-width: 50%;
+    /* max-width: 100%; */
+    width:50vw;
     margin-top: 10px;
     line-height: 1.6rem;
     justify-items: flex-start;
@@ -24,6 +25,13 @@ body{
     margin-top: 2rem;
     height: 95vh;
   }
+
+  @media only screen and (max-width: 600px){
+    .container{
+      width:65vw;
+    }
+  }
+  
   .mv-info{
     display: flex;
     width: 10rem;
